--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Joan Pedro Oliveira de Souza <jpos.senai@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "nodemon src/server.js"
+    "dev:server": "nodemon src/server.js",
+    "dev:queue": "nodemon src/queue.js"
   },
   "dependencies": {
+    "bull": "^3.14.0",
     "consign": "^0.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
