--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "QueueEmails-API",
+  "name": "queueemails-api",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/JoanPedro/QueueEmails-API.git",
   "author": "Joan Pedro Oliveira de Souza <jpos.senai@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "dev": "npm-run-all -p dev:*",
     "dev:server": "nodemon src/server.js",
     "dev:queue": "nodemon src/queue.js"
   },
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "sucrase": "^3.15.0"
   }
 }
